--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ngneat/transloco": "^6.0.0",
+    "@types/jwt-decode": "^3.1.0",
     "chart.js": "^4.4.0",
     "firebase": "^10.5.2",
+    "jwt-decode": "^4.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.5.0",
