--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@ngneat/transloco": "^6.0.0",
     "chart.js": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.5.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
