--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@coreui/icons-angular": "^4.5.27",
     "@ngneat/transloco": "^6.0.0",
     "@popperjs/core": "^2.11.8",
+    "@types/bcrypt": "^5.0.2",
     "angular-mixed-cdk-drag-drop": "^2.1.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs-then": "^1.0.1",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.5.2",
@@ -45,9 +48,11 @@
     "@angular-devkit/build-angular": "^16.2.1",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
+    "@types/jsonwebtoken": "^9.0.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
