--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.11.8",
     "@types/bcrypt": "^5.0.2",
     "angular-mixed-cdk-drag-drop": "^2.1.0",
+    "angular-oauth2-oidc": "^15.0.1",
     "bcrypt": "^5.1.1",
     "bcryptjs-then": "^1.0.1",
     "chart.js": "^4.4.0",
